--- a/Changes.txt
+++ b/Changes.txt
@@ -1,164 +1,164 @@
-Вам мешают излишества на Одноклассниках?
-Тогда это расширение специально для Вас!
+Р’Р°Рј РјРµС€Р°СЋС‚ РёР·Р»РёС€РµСЃС‚РІР° РЅР° РћРґРЅРѕРєР»Р°СЃСЃРЅРёРєР°С…?
+РўРѕРіРґР° СЌС‚Рѕ СЂР°СЃС€РёСЂРµРЅРёРµ СЃРїРµС†РёР°Р»СЊРЅРѕ РґР»СЏ Р’Р°СЃ!
 
-Функции OK Changer:
-• Скачивание музыки
-• Темы верхней панели
-• Динамичность смены дизайна
-• Увеличение кнопки отправить
-• Убирает панель Mail.Ru
-• Скрытие верхней панели
-• Расширение пространства
-• Быстрое перенаправление ссылок
-• Блокировка рекламы
-• Возможность скрыть кнопку плеера
-• Цвета текста в сообщениях кружочками
-• Скрытие блоков на странице
-• Цветовые темы сайта
-• Регулируемая прозрачность страницы
-• Скрытие подарков и оценок
-• Изменение положения аватарки
-• Дополнительные тени
-• Скрытие меню и оповещений
-• Новые оригинальные маркеры онлайна
-• Фоновые темы для Одноклассников
-• Изменение шрифтов страницы
+Р¤СѓРЅРєС†РёРё OK Changer:
+вЂў РЎРєР°С‡РёРІР°РЅРёРµ РјСѓР·С‹РєРё
+вЂў РўРµРјС‹ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё
+вЂў Р”РёРЅР°РјРёС‡РЅРѕСЃС‚СЊ СЃРјРµРЅС‹ РґРёР·Р°Р№РЅР°
+вЂў РЈРІРµР»РёС‡РµРЅРёРµ РєРЅРѕРїРєРё РѕС‚РїСЂР°РІРёС‚СЊ
+вЂў РЈР±РёСЂР°РµС‚ РїР°РЅРµР»СЊ Mail.Ru
+вЂў РЎРєСЂС‹С‚РёРµ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё
+вЂў Р Р°СЃС€РёСЂРµРЅРёРµ РїСЂРѕСЃС‚СЂР°РЅСЃС‚РІР°
+вЂў Р‘С‹СЃС‚СЂРѕРµ РїРµСЂРµРЅР°РїСЂР°РІР»РµРЅРёРµ СЃСЃС‹Р»РѕРє
+вЂў Р‘Р»РѕРєРёСЂРѕРІРєР° СЂРµРєР»Р°РјС‹
+вЂў Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ СЃРєСЂС‹С‚СЊ РєРЅРѕРїРєСѓ РїР»РµРµСЂР°
+вЂў Р¦РІРµС‚Р° С‚РµРєСЃС‚Р° РІ СЃРѕРѕР±С‰РµРЅРёСЏС… РєСЂСѓР¶РѕС‡РєР°РјРё
+вЂў РЎРєСЂС‹С‚РёРµ Р±Р»РѕРєРѕРІ РЅР° СЃС‚СЂР°РЅРёС†Рµ
+вЂў Р¦РІРµС‚РѕРІС‹Рµ С‚РµРјС‹ СЃР°Р№С‚Р°
+вЂў Р РµРіСѓР»РёСЂСѓРµРјР°СЏ РїСЂРѕР·СЂР°С‡РЅРѕСЃС‚СЊ СЃС‚СЂР°РЅРёС†С‹
+вЂў РЎРєСЂС‹С‚РёРµ РїРѕРґР°СЂРєРѕРІ Рё РѕС†РµРЅРѕРє
+вЂў РР·РјРµРЅРµРЅРёРµ РїРѕР»РѕР¶РµРЅРёСЏ Р°РІР°С‚Р°СЂРєРё
+вЂў Р”РѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Рµ С‚РµРЅРё
+вЂў РЎРєСЂС‹С‚РёРµ РјРµРЅСЋ Рё РѕРїРѕРІРµС‰РµРЅРёР№
+вЂў РќРѕРІС‹Рµ РѕСЂРёРіРёРЅР°Р»СЊРЅС‹Рµ РјР°СЂРєРµСЂС‹ РѕРЅР»Р°Р№РЅР°
+вЂў Р¤РѕРЅРѕРІС‹Рµ С‚РµРјС‹ РґР»СЏ РћРґРЅРѕРєР»Р°СЃСЃРЅРёРєРѕРІ
+вЂў РР·РјРµРЅРµРЅРёРµ С€СЂРёС„С‚РѕРІ СЃС‚СЂР°РЅРёС†С‹
 
-Если Вы нашли ошибку просьба отписаться в официальной группе
+Р•СЃР»Рё Р’С‹ РЅР°С€Р»Рё РѕС€РёР±РєСѓ РїСЂРѕСЃСЊР±Р° РѕС‚РїРёСЃР°С‚СЊСЃСЏ РІ РѕС„РёС†РёР°Р»СЊРЅРѕР№ РіСЂСѓРїРїРµ
 
 1.7.2
-* Исправлено несоответствие дизайна
-* Убрана желтая полоска
-* Устранено сползание декора
-* Устранены мелкие ошибки
-* Вырезаны не нужные функции
-* Изменены значки в меню
-+ Настройки сохраняются на серверах
-+ Добавлено автоскрытие верхней панели
-+ Добавлено изменение шрифта на странице
-+ 9 интересных шрифтов
+* РСЃРїСЂР°РІР»РµРЅРѕ РЅРµСЃРѕРѕС‚РІРµС‚СЃС‚РІРёРµ РґРёР·Р°Р№РЅР°
+* РЈР±СЂР°РЅР° Р¶РµР»С‚Р°СЏ РїРѕР»РѕСЃРєР°
+* РЈСЃС‚СЂР°РЅРµРЅРѕ СЃРїРѕР»Р·Р°РЅРёРµ РґРµРєРѕСЂР°
+* РЈСЃС‚СЂР°РЅРµРЅС‹ РјРµР»РєРёРµ РѕС€РёР±РєРё
+* Р’С‹СЂРµР·Р°РЅС‹ РЅРµ РЅСѓР¶РЅС‹Рµ С„СѓРЅРєС†РёРё
+* РР·РјРµРЅРµРЅС‹ Р·РЅР°С‡РєРё РІ РјРµРЅСЋ
++ РќР°СЃС‚СЂРѕР№РєРё СЃРѕС…СЂР°РЅСЏСЋС‚СЃСЏ РЅР° СЃРµСЂРІРµСЂР°С…
++ Р”РѕР±Р°РІР»РµРЅРѕ Р°РІС‚РѕСЃРєСЂС‹С‚РёРµ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё
++ Р”РѕР±Р°РІР»РµРЅРѕ РёР·РјРµРЅРµРЅРёРµ С€СЂРёС„С‚Р° РЅР° СЃС‚СЂР°РЅРёС†Рµ
++ 9 РёРЅС‚РµСЂРµСЃРЅС‹С… С€СЂРёС„С‚РѕРІ
 
 1.7.1
-+ Скрытие кнопки писем Mail
-* Исправлен баг выхода из Одноклассников
++ РЎРєСЂС‹С‚РёРµ РєРЅРѕРїРєРё РїРёСЃРµРј Mail
+* РСЃРїСЂР°РІР»РµРЅ Р±Р°Рі РІС‹С…РѕРґР° РёР· РћРґРЅРѕРєР»Р°СЃСЃРЅРёРєРѕРІ
 
 1.7.0
-+ Значок OK Changer теперь в новом месте
-+ Значок отображается только на страницах Одноклассников
-+ Специально для пользователей Opera
++ Р—РЅР°С‡РѕРє OK Changer С‚РµРїРµСЂСЊ РІ РЅРѕРІРѕРј РјРµСЃС‚Рµ
++ Р—РЅР°С‡РѕРє РѕС‚РѕР±СЂР°Р¶Р°РµС‚СЃСЏ С‚РѕР»СЊРєРѕ РЅР° СЃС‚СЂР°РЅРёС†Р°С… РћРґРЅРѕРєР»Р°СЃСЃРЅРёРєРѕРІ
++ РЎРїРµС†РёР°Р»СЊРЅРѕ РґР»СЏ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№ Opera
 
 1.6.7
-+ Кнопка новых писем на панели
-* Оптимизирована работа расширения
++ РљРЅРѕРїРєР° РЅРѕРІС‹С… РїРёСЃРµРј РЅР° РїР°РЅРµР»Рё
+* РћРїС‚РёРјРёР·РёСЂРѕРІР°РЅР° СЂР°Р±РѕС‚Р° СЂР°СЃС€РёСЂРµРЅРёСЏ
 
 1.6.6
-+ Добавлены новости в оповещениях
-* Исправлено не применение тем
-* Багфиксы
++ Р”РѕР±Р°РІР»РµРЅС‹ РЅРѕРІРѕСЃС‚Рё РІ РѕРїРѕРІРµС‰РµРЅРёСЏС…
+* РСЃРїСЂР°РІР»РµРЅРѕ РЅРµ РїСЂРёРјРµРЅРµРЅРёРµ С‚РµРј
+* Р‘Р°РіС„РёРєСЃС‹
 
 1.6.5
-+ Добавлена поддержка сторонних сайтов
-+ Несколько новых тем
-* Устранены ошибки работы
++ Р”РѕР±Р°РІР»РµРЅР° РїРѕРґРґРµСЂР¶РєР° СЃС‚РѕСЂРѕРЅРЅРёС… СЃР°Р№С‚РѕРІ
++ РќРµСЃРєРѕР»СЊРєРѕ РЅРѕРІС‹С… С‚РµРј
+* РЈСЃС‚СЂР°РЅРµРЅС‹ РѕС€РёР±РєРё СЂР°Р±РѕС‚С‹
 
 1.6.3
-+ Скрытие блока "Рекомендуется"
-+ Скрытие блока "Игры для вас"
-+ Оптимизация
++ РЎРєСЂС‹С‚РёРµ Р±Р»РѕРєР° "Р РµРєРѕРјРµРЅРґСѓРµС‚СЃСЏ"
++ РЎРєСЂС‹С‚РёРµ Р±Р»РѕРєР° "РРіСЂС‹ РґР»СЏ РІР°СЃ"
++ РћРїС‚РёРјРёР·Р°С†РёСЏ
 
 1.6.2
-+ Новые маркеры онлайна
-* Исправлены многие баги
-* Немного изменено меню
-* Теперь некоторые функции включены по умолчанию
++ РќРѕРІС‹Рµ РјР°СЂРєРµСЂС‹ РѕРЅР»Р°Р№РЅР°
+* РСЃРїСЂР°РІР»РµРЅС‹ РјРЅРѕРіРёРµ Р±Р°РіРё
+* РќРµРјРЅРѕРіРѕ РёР·РјРµРЅРµРЅРѕ РјРµРЅСЋ
+* РўРµРїРµСЂСЊ РЅРµРєРѕС‚РѕСЂС‹Рµ С„СѓРЅРєС†РёРё РІРєР»СЋС‡РµРЅС‹ РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ
 
 1.6.0
-+ Возможность уменьшить страницу
-+ Скрытие блока Модератора
-+ Скрывание всплывающих оповещений
-+ Скрытие оценок над фотографиями
-+ Скрытие подарков
-+ Скрытие счетчиков оповещений
-+ Слайдер изменения прозрачности страницы
-* Изменено главное меню OK Changer
-* Устранены ошибки
++ Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ СѓРјРµРЅСЊС€РёС‚СЊ СЃС‚СЂР°РЅРёС†Сѓ
++ РЎРєСЂС‹С‚РёРµ Р±Р»РѕРєР° РњРѕРґРµСЂР°С‚РѕСЂР°
++ РЎРєСЂС‹РІР°РЅРёРµ РІСЃРїР»С‹РІР°СЋС‰РёС… РѕРїРѕРІРµС‰РµРЅРёР№
++ РЎРєСЂС‹С‚РёРµ РѕС†РµРЅРѕРє РЅР°Рґ С„РѕС‚РѕРіСЂР°С„РёСЏРјРё
++ РЎРєСЂС‹С‚РёРµ РїРѕРґР°СЂРєРѕРІ
++ РЎРєСЂС‹С‚РёРµ СЃС‡РµС‚С‡РёРєРѕРІ РѕРїРѕРІРµС‰РµРЅРёР№
++ РЎР»Р°Р№РґРµСЂ РёР·РјРµРЅРµРЅРёСЏ РїСЂРѕР·СЂР°С‡РЅРѕСЃС‚Рё СЃС‚СЂР°РЅРёС†С‹
+* РР·РјРµРЅРµРЅРѕ РіР»Р°РІРЅРѕРµ РјРµРЅСЋ OK Changer
+* РЈСЃС‚СЂР°РЅРµРЅС‹ РѕС€РёР±РєРё
 
 1.5.2
-+ Темы от пользователей
-+ Добавлен красный декор
-* Исправлено окошко выхода с сайта
-* Правильное применение тем
-* Убрана точка на панели
-* Исправлена строка поиска в Музыке
-* Исправление багов
++ РўРµРјС‹ РѕС‚ РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№
++ Р”РѕР±Р°РІР»РµРЅ РєСЂР°СЃРЅС‹Р№ РґРµРєРѕСЂ
+* РСЃРїСЂР°РІР»РµРЅРѕ РѕРєРѕС€РєРѕ РІС‹С…РѕРґР° СЃ СЃР°Р№С‚Р°
+* РџСЂР°РІРёР»СЊРЅРѕРµ РїСЂРёРјРµРЅРµРЅРёРµ С‚РµРј
+* РЈР±СЂР°РЅР° С‚РѕС‡РєР° РЅР° РїР°РЅРµР»Рё
+* РСЃРїСЂР°РІР»РµРЅР° СЃС‚СЂРѕРєР° РїРѕРёСЃРєР° РІ РњСѓР·С‹РєРµ
+* РСЃРїСЂР°РІР»РµРЅРёРµ Р±Р°РіРѕРІ
 
 1.5.1
-* Исправлена ошибка применения стилей
-* Исправлена ошибка применения декора
+* РСЃРїСЂР°РІР»РµРЅР° РѕС€РёР±РєР° РїСЂРёРјРµРЅРµРЅРёСЏ СЃС‚РёР»РµР№
+* РСЃРїСЂР°РІР»РµРЅР° РѕС€РёР±РєР° РїСЂРёРјРµРЅРµРЅРёСЏ РґРµРєРѕСЂР°
 
 1.5.0
-+ Возможность устанавливать новые темы
-* Раздел "Темы" переименован в "Стили"
++ Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ СѓСЃС‚Р°РЅР°РІР»РёРІР°С‚СЊ РЅРѕРІС‹Рµ С‚РµРјС‹
+* Р Р°Р·РґРµР» "РўРµРјС‹" РїРµСЂРµРёРјРµРЅРѕРІР°РЅ РІ "РЎС‚РёР»Рё"
 
 1.4.8
-* Исправление багов
+* РСЃРїСЂР°РІР»РµРЅРёРµ Р±Р°РіРѕРІ
 
 1.4.7
-+ Возможность поделиться ссылкой или страницей на ПКМ
-* Исправлен баг со ссылкой на Офф.Страницу
-* Исправлены баги во время перезагрузки страницы
++ Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ РїРѕРґРµР»РёС‚СЊСЃСЏ СЃСЃС‹Р»РєРѕР№ РёР»Рё СЃС‚СЂР°РЅРёС†РµР№ РЅР° РџРљРњ
+* РСЃРїСЂР°РІР»РµРЅ Р±Р°Рі СЃРѕ СЃСЃС‹Р»РєРѕР№ РЅР° РћС„С„.РЎС‚СЂР°РЅРёС†Сѓ
+* РСЃРїСЂР°РІР»РµРЅС‹ Р±Р°РіРё РІРѕ РІСЂРµРјСЏ РїРµСЂРµР·Р°РіСЂСѓР·РєРё СЃС‚СЂР°РЅРёС†С‹
 
 1.4.3
-+ Скачивание музыки с серверов
++ РЎРєР°С‡РёРІР°РЅРёРµ РјСѓР·С‹РєРё СЃ СЃРµСЂРІРµСЂРѕРІ
 
 1.4.2
-* Исправлено расширение пространства
-* Пофиксен баг с кнопкой "Выход"
-* Пофиксен баг с экраном "Видео"
-+ Скрытие блока "Вошел на сайт"
-- Убрана кнопка уменьшения строки поиска
+* РСЃРїСЂР°РІР»РµРЅРѕ СЂР°СЃС€РёСЂРµРЅРёРµ РїСЂРѕСЃС‚СЂР°РЅСЃС‚РІР°
+* РџРѕС„РёРєСЃРµРЅ Р±Р°Рі СЃ РєРЅРѕРїРєРѕР№ "Р’С‹С…РѕРґ"
+* РџРѕС„РёРєСЃРµРЅ Р±Р°Рі СЃ СЌРєСЂР°РЅРѕРј "Р’РёРґРµРѕ"
++ РЎРєСЂС‹С‚РёРµ Р±Р»РѕРєР° "Р’РѕС€РµР» РЅР° СЃР°Р№С‚"
+- РЈР±СЂР°РЅР° РєРЅРѕРїРєР° СѓРјРµРЅСЊС€РµРЅРёСЏ СЃС‚СЂРѕРєРё РїРѕРёСЃРєР°
 
 
 1.4.1
-+ Добавлен "Expand Mod"
-* Возвращено скрытие блока "О себе"
-* Пофиксены некоторые баги
-- Убрана кнопка "Сохранить"
++ Р”РѕР±Р°РІР»РµРЅ "Expand Mod"
+* Р’РѕР·РІСЂР°С‰РµРЅРѕ СЃРєСЂС‹С‚РёРµ Р±Р»РѕРєР° "Рћ СЃРµР±Рµ"
+* РџРѕС„РёРєСЃРµРЅС‹ РЅРµРєРѕС‚РѕСЂС‹Рµ Р±Р°РіРё
+- РЈР±СЂР°РЅР° РєРЅРѕРїРєР° "РЎРѕС…СЂР°РЅРёС‚СЊ"
 
 1.4.0
-+ Возможность опустить аватарку
-+ Дополнительные тени для интерфейса
-* Расширение переписано с нуля
-* Повышено быстродействие
-* Исправлено множество багов
-* Поправлены серверные ошибки
-* Нет лишних перезагрузок страницы
-* Изменен логотип и значок
-* Перенесена кнопка выхода
-* Кнопка "Наверх" изменена
-- Удалено скрытие блока "О себе"
++ Р’РѕР·РјРѕР¶РЅРѕСЃС‚СЊ РѕРїСѓСЃС‚РёС‚СЊ Р°РІР°С‚Р°СЂРєСѓ
++ Р”РѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Рµ С‚РµРЅРё РґР»СЏ РёРЅС‚РµСЂС„РµР№СЃР°
+* Р Р°СЃС€РёСЂРµРЅРёРµ РїРµСЂРµРїРёСЃР°РЅРѕ СЃ РЅСѓР»СЏ
+* РџРѕРІС‹С€РµРЅРѕ Р±С‹СЃС‚СЂРѕРґРµР№СЃС‚РІРёРµ
+* РСЃРїСЂР°РІР»РµРЅРѕ РјРЅРѕР¶РµСЃС‚РІРѕ Р±Р°РіРѕРІ
+* РџРѕРїСЂР°РІР»РµРЅС‹ СЃРµСЂРІРµСЂРЅС‹Рµ РѕС€РёР±РєРё
+* РќРµС‚ Р»РёС€РЅРёС… РїРµСЂРµР·Р°РіСЂСѓР·РѕРє СЃС‚СЂР°РЅРёС†С‹
+* РР·РјРµРЅРµРЅ Р»РѕРіРѕС‚РёРї Рё Р·РЅР°С‡РѕРє
+* РџРµСЂРµРЅРµСЃРµРЅР° РєРЅРѕРїРєР° РІС‹С…РѕРґР°
+* РљРЅРѕРїРєР° "РќР°РІРµСЂС…" РёР·РјРµРЅРµРЅР°
+- РЈРґР°Р»РµРЅРѕ СЃРєСЂС‹С‚РёРµ Р±Р»РѕРєР° "Рћ СЃРµР±Рµ"
 
 1.3.8
-+ Добавлены цвета для верхней панели
-* Исправлено падение плагина
-* В зависимости от цвета меняется фон в списке тем
-* Облегчена работа
++ Р”РѕР±Р°РІР»РµРЅС‹ С†РІРµС‚Р° РґР»СЏ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё
+* РСЃРїСЂР°РІР»РµРЅРѕ РїР°РґРµРЅРёРµ РїР»Р°РіРёРЅР°
+* Р’ Р·Р°РІРёСЃРёРјРѕСЃС‚Рё РѕС‚ С†РІРµС‚Р° РјРµРЅСЏРµС‚СЃСЏ С„РѕРЅ РІ СЃРїРёСЃРєРµ С‚РµРј
+* РћР±Р»РµРіС‡РµРЅР° СЂР°Р±РѕС‚Р°
 
 1.3.7
-* Исправлены баги оформления
-* Исправлена перезагрузка страницы
+* РСЃРїСЂР°РІР»РµРЅС‹ Р±Р°РіРё РѕС„РѕСЂРјР»РµРЅРёСЏ
+* РСЃРїСЂР°РІР»РµРЅР° РїРµСЂРµР·Р°РіСЂСѓР·РєР° СЃС‚СЂР°РЅРёС†С‹
 
 1.3.6
-+ Добавлена кнопка выхода на панель
-+ Добавлена кнопка "Вверх"
-* Фикс подергивания фона
-* Корректировка надписей
-* Облегчение расширения
++ Р”РѕР±Р°РІР»РµРЅР° РєРЅРѕРїРєР° РІС‹С…РѕРґР° РЅР° РїР°РЅРµР»СЊ
++ Р”РѕР±Р°РІР»РµРЅР° РєРЅРѕРїРєР° "Р’РІРµСЂС…"
+* Р¤РёРєСЃ РїРѕРґРµСЂРіРёРІР°РЅРёСЏ С„РѕРЅР°
+* РљРѕСЂСЂРµРєС‚РёСЂРѕРІРєР° РЅР°РґРїРёСЃРµР№
+* РћР±Р»РµРіС‡РµРЅРёРµ СЂР°СЃС€РёСЂРµРЅРёСЏ
 
 1.3.0
-+ Теперь можно устанавливать темы для верхней панели
-* Изменен значок
-* Повышена динамичность изменения страницы
++ РўРµРїРµСЂСЊ РјРѕР¶РЅРѕ СѓСЃС‚Р°РЅР°РІР»РёРІР°С‚СЊ С‚РµРјС‹ РґР»СЏ РІРµСЂС…РЅРµР№ РїР°РЅРµР»Рё
+* РР·РјРµРЅРµРЅ Р·РЅР°С‡РѕРє
+* РџРѕРІС‹С€РµРЅР° РґРёРЅР°РјРёС‡РЅРѕСЃС‚СЊ РёР·РјРµРЅРµРЅРёСЏ СЃС‚СЂР°РЅРёС†С‹
 
 1.2.1
-* Подправлена кодировка
+* РџРѕРґРїСЂР°РІР»РµРЅР° РєРѕРґРёСЂРѕРІРєР°
