--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -222,6 +222,14 @@
 	"CheckInternet": {
 		"message": "Check the internet connection",
 		"description": ""
+	},
+	"Cursor": {
+		"message": "Cursor",
+		"description": ""
+	},
+	"Music4u": {
+		"message": "Music for you",
+		"description": ""
 	}
 }
 
