--- a/Changes.txt
+++ b/Changes.txt
@@ -1,18 +1,20 @@
-Вам мешают излишества на Одноклассниках?
+﻿Вам мешают излишества на Одноклассниках?
 Тогда это расширение специально для Вас!
 
 Функции OK Changer:
 • Скачивание музыки
 • Темы верхней панели
 • Динамичность смены дизайна
+• Установка модов для страницы
 • Увеличение кнопки отправить
 • Убирает панель Mail.Ru
+• Фоновые темы для Одноклассников
+• Изменение шрифтов страницы
 • Скрытие верхней панели
 • Расширение пространства
 • Быстрое перенаправление ссылок
 • Блокировка рекламы
 • Возможность скрыть кнопку плеера
-• Цвета текста в сообщениях кружочками
 • Скрытие блоков на странице
 • Цветовые темы сайта
 • Регулируемая прозрачность страницы
@@ -20,11 +22,19 @@
 • Изменение положения аватарки
 • Дополнительные тени
 • Скрытие меню и оповещений
-• Новые оригинальные маркеры онлайна
-• Фоновые темы для Одноклассников
-• Изменение шрифтов страницы
 
 Если Вы нашли ошибку просьба отписаться в официальной группе
+
+1.7.4
++ Добавлена поддержка модов страницы
++ Скрытие блока "Музыка для вас"
+* Исправлено положение статуса
+* Исправлены ошибки при запуске
+* Исправлено отображение по короткому адресу(ok.ru)
+
+1.7.3
++ Расширение переведено на три языка: русский, английский, румынский
++ Добавлено 5 шрифтов: Ubuntu, Ruslan, Lobster, Russo, Prosto
 
 1.7.2
 * Исправлено несоответствие дизайна
