--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -223,8 +223,8 @@
 		"message": "Check the internet connection",
 		"description": ""
 	},
-	"Cursor": {
-		"message": "Cursor",
+	"Mod": {
+		"message": "Mods",
 		"description": ""
 	},
 	"Music4u": {
