--- a/source/_locales/ru/messages.json
+++ b/source/_locales/ru/messages.json
@@ -223,8 +223,8 @@
 		"message": "Проверьте соединение с интернет",
 		"description": ""
 	},
-	"Cursor": {
-		"message": "Курсор",
+	"Mod": {
+		"message": "Моды",
 		"description": ""
 	},
 	"Music4u": {
