--- a/source/_locales/ro/messages.json
+++ b/source/_locales/ro/messages.json
@@ -230,6 +230,10 @@
 	"Music4u": {
 		"message": "Muzica pentru tine",
 		"description": ""
+	},
+	"PageColor": {
+		"message": "Culoarea a paginii",
+		"description": ""
 	}
 }
 
