[fix] Less update rate. [new] Revert old messages style

--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -234,6 +234,10 @@
 	"PageColor": {
 		"message": "Color of the page",
 		"description": ""
+	},
+	"OldMessages":{
+		"message": "Revert old messages view",
+		"description": ""
 	}
 }
 
