--- a/source/_locales/ro/messages.json
+++ b/source/_locales/ro/messages.json
@@ -234,6 +234,10 @@
 	"PageColor": {
 		"message": "Culoarea a paginii",
 		"description": ""
+	},
+	"OldMessages":{
+		"message": "Revert old messages view",
+		"description": ""
 	}
 }
 
