--- a/source/_locales/ru/messages.json
+++ b/source/_locales/ru/messages.json
@@ -234,6 +234,10 @@
 	"PageColor": {
 		"message": "Цвет страницы",
 		"description": ""
+	},
+	"OldMessages":{
+		"message": "Вернуть старый вид сообщений",
+		"description": ""
 	}
 }
 
