--- a/source/_locales/ru/messages.json
+++ b/source/_locales/ru/messages.json
@@ -238,6 +238,9 @@
 	"OldMessages":{
 		"message": "Вернуть старый вид сообщений",
 		"description": ""
+	},
+	"manageInstalled":{
+		"message": "Установлено"
 	}
 }
 
