--- a/source/_locales/ro/messages.json
+++ b/source/_locales/ro/messages.json
@@ -238,6 +238,9 @@
 	"OldMessages":{
 		"message": "Revert old messages view",
 		"description": ""
+	},
+	"manageInstalled":{
+		"message": "Installed"
 	}
 }
 
