Fixed issue 11: Themes categories not switch

--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -241,6 +241,12 @@
 	},
 	"manageInstalled":{
 		"message": "Installed"
+	},
+	"keyOpen": {
+		"message": "Open/hide popup window"
+	},
+	"OKChangerThemes": {
+		"message": "OK Changer Themes"
 	}
 }
 
