--- a/Changes.txt
+++ b/Changes.txt
@@ -25,6 +25,10 @@
 
 Если Вы нашли ошибку просьба отписаться в официальной группе
 
+1.8.3
+* Скрытие "Модератор Одноклассников"
+* Скрытие блока "Группы для Вас"
+
 1.8.2
 + Возвращена кнопка "Наверх"
 * Исправлен значок
