--- a/Changes.txt
+++ b/Changes.txt
@@ -25,6 +25,11 @@
 
 Если Вы нашли ошибку просьба отписаться в официальной группе
 
+1.8.4
+* Возвращена ссылка на официальную страницу
+* Автоскрытие верхней панели теперь удобнее
+* Исправлено "Скрытие счетчиков оповещений"
+
 1.8.3
 * Скрытие "Модератор Одноклассников"
 * Скрытие блока "Группы для Вас"
