--- a/Changes.txt
+++ b/Changes.txt
@@ -25,6 +25,9 @@
 
 Если Вы нашли ошибку просьба отписаться в официальной группе
 
+1.8.5
++ Отображается количество тем в каждой категории
+
 1.8.4
 * Возвращена ссылка на официальную страницу
 * Автоскрытие верхней панели теперь удобнее
